summaries/errors_2025-07-22_15-00-56.txt

❌ update_game_time ERROR (2025-07-22 03:00:58 PM EDT):
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/indexes/base.py", line 3812, in get_loc
    return self._engine.get_loc(casted_key)
  File "pandas/_libs/index.pyx", line 167, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/index.pyx", line 196, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/hashtable_class_helper.pxi", line 7088, in pandas._libs.hashtable.PyObjectHashTable.get_item
  File "pandas/_libs/hashtable_class_helper.pxi", line 7096, in pandas._libs.hashtable.PyObjectHashTable.get_item
KeyError: 'home_team'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/update_game_time.py", line 52, in <module>
    update_game_time()
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/update_game_time.py", line 13, in update_game_time
    stadium_df['home_team'] = stadium_df['home_team'].str.strip().str.title()
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/frame.py", line 4107, in __getitem__
    indexer = self.columns.get_loc(key)
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/indexes/base.py", line 3819, in get_loc
    raise KeyError(key) from err
KeyError: 'home_team'

---

❌ filter_stadium_metadata ERROR (2025-07-22 03:00:59 PM EDT):
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/indexes/base.py", line 3812, in get_loc
    return self._engine.get_loc(casted_key)
  File "pandas/_libs/index.pyx", line 167, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/index.pyx", line 196, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/hashtable_class_helper.pxi", line 7088, in pandas._libs.hashtable.PyObjectHashTable.get_item
  File "pandas/_libs/hashtable_class_helper.pxi", line 7096, in pandas._libs.hashtable.PyObjectHashTable.get_item
KeyError: 'away_team'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/filter_stadium_metadata.py", line 38, in <module>
    filter_stadium_metadata()
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/filter_stadium_metadata.py", line 16, in filter_stadium_metadata
    df_cleaned = df[df["away_team"].notna() & (df["away_team"].str.strip() != "")]
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/frame.py", line 4107, in __getitem__
    indexer = self.columns.get_loc(key)
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/indexes/base.py", line 3819, in get_loc
    raise KeyError(key) from err
KeyError: 'away_team'

---

❌ normalize_pitcher_home_away ERROR (2025-07-22 03:01:00 PM EDT):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/normalize_pitcher_home_away.py", line 71
    away_df = away_df[["last_name, first_name", "team", "type"}]  # leave column name as "team"
                                                              ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '['

---

❌ generate_weather_csv ERROR (2025-07-22 03:01:00 PM EDT):
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/indexes/base.py", line 3812, in get_loc
    return self._engine.get_loc(casted_key)
  File "pandas/_libs/index.pyx", line 167, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/index.pyx", line 196, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/hashtable_class_helper.pxi", line 7088, in pandas._libs.hashtable.PyObjectHashTable.get_item
  File "pandas/_libs/hashtable_class_helper.pxi", line 7096, in pandas._libs.hashtable.PyObjectHashTable.get_item
KeyError: 'home_team'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/generate_weather_csv.py", line 85, in <module>
    generate_weather_csv()
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/generate_weather_csv.py", line 25, in generate_weather_csv
    stadium_df['home_team'] = stadium_df['home_team'].str.strip().str.upper()
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/frame.py", line 4107, in __getitem__
    indexer = self.columns.get_loc(key)
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/indexes/base.py", line 3819, in get_loc
    raise KeyError(key) from err
KeyError: 'home_team'

---

❌ apply_pitcher_park_adjustment ERROR (2025-07-22 03:01:11 PM EDT):
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/indexes/base.py", line 3812, in get_loc
    return self._engine.get_loc(casted_key)
  File "pandas/_libs/index.pyx", line 167, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/index.pyx", line 196, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/hashtable_class_helper.pxi", line 7088, in pandas._libs.hashtable.PyObjectHashTable.get_item
  File "pandas/_libs/hashtable_class_helper.pxi", line 7096, in pandas._libs.hashtable.PyObjectHashTable.get_item
KeyError: 'home_team'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/apply_pitcher_park_adjustment.py", line 143, in <module>
    main()
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/apply_pitcher_park_adjustment.py", line 134, in main
    adj_home, log_home = apply_adjustments(pitchers_home, games_df, "home", park_day, park_night)
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/apply_pitcher_park_adjustment.py", line 61, in apply_adjustments
    pitchers_df[team_key] = pitchers_df[team_key].astype(str).str.strip().str.lower()
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/frame.py", line 4107, in __getitem__
    indexer = self.columns.get_loc(key)
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/indexes/base.py", line 3819, in get_loc
    raise KeyError(key) from err
KeyError: 'home_team'

---

❌ combine_pitcher_weather_park_away ERROR (2025-07-22 03:01:12 PM EDT):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/combine_pitcher_weather_park_away.py", line 30
    on=["last_name, first_name", "away_team
                                 ^
SyntaxError: unterminated string literal (detected at line 30)

---

